@@ -1,3 +1,9 @@
+2012-12-11  Eli Zaretskii  <eliz@gnu.org>
+
+	* configure.ac (TGT_IS_WINDOWS): New conditional.
+	* util/Makefile.am (bin_SCRIPTS) [TGT_IS_WINDOWS]: add Windows
+	batch files to bin_SCRIPTS.
+
 2012-12-14  Ineiev  <ineiev@gmail.com>  (tiny change)
 
 	* configure.ac (HAVE_TERMLIBS): new conditional.  End with
